--- a/numerical/results.tex
+++ b/numerical/results.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % results.tex - Ian Huston
-% $Id: results.tex,v 1.20 2009/10/14 12:35:20 ith Exp $
+% $Id: results.tex,v 1.21 2009/10/14 17:46:40 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: results.tex,v 1.20 2009/10/14 12:35:20 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: results.tex,v 1.21 2009/10/14 17:46:40 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -46,23 +46,24 @@ differences apparent between the potentials which will be outlined in
 Section~\ref{sec:compare-res}.
 
 We have listed the parameters $m$, $\lambda$, $\sigma$ and $m_0$ of the potentials
-in Section~\ref{sec:pots-num} which were found using the WMAP5 normalisation at
-$\kwmap=0.002 \Mpc^{-1} = 5.25 \e{-60}\Mpl$ \cite{Komatsu:2008hk}.
-We have also outlined in \eq{eq:Krangedefns} the three $k$ ranges that we will use,
+in Section~\ref{sec:pots-num}. These were found using the WMAP5 normalisation
+at $\kwmap=0.002 \Mpc^{-1} = 5.25 \e{-60}\Mpl$ \cite{Komatsu:2008hk}.
+We have also outlined in \eq{eq:Krangedefns} the three $k$ ranges that have been
+used:
 % 
-\begin{eqnarray*}
-K_1 &=& \left[1.9\e{-5}, 0.039\right]\Mpc^{-1}\,,\quad \Delta k =
+\begin{align*}
+K_1 &= \left[1.9\e{-5}, 0.039\right]\Mpc^{-1}\,,\quad \Delta k =
 3.8\e{-5}\Mpc^{-1} \nonumber\\
-K_2 &=& \left[5.71\e{-5}, 0.12\right]\Mpc^{-1}\,, \quad \Delta k =
+K_2 &= \left[5.71\e{-5}, 0.12\right]\Mpc^{-1}\,, \quad \Delta k =
 1.2\e{-4}\Mpc^{-1}
 \nonumber\\ 
-K_3 &=& \left[9.52\e{-5}, 0.39\right]\Mpc^{-1}\,, \quad \Delta k =
+K_3 &= \left[9.52\e{-5}, 0.39\right]\Mpc^{-1}\,, \quad \Delta k =
 3.8\e{-4}\Mpc^{-1} \,.
-\end{eqnarray*}
+\end{align*}
 Many of the results will be quoted for $\kwmap$ which lies in all three of these
 ranges.
 
-Given that the first order perturbations for the chosen potentials give an
+Given that the first order perturbations for the chosen potentials produce an
 almost scale invariant power spectrum with no running, it is no surprise that
 the results from the three different $k$ ranges are very similar. The second
 order source term is somewhat dependent on the lower bound of $k$ (upper bound
@@ -91,7 +92,7 @@ Section~\ref{sec:disc-num} there will be a discussion of outcomes of the chapter
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 In Section~\ref{sec:msqphisq-res} general results will be given demonstrating the
 effective operation of the numerical system. These results all use the
-$V(\vp)=\msqphisq$ for the purposes of comparison. The results for the four
+$V(\vp)=\msqphisq$ potential for the purposes of comparison. The results for the four
 different potentials will be compared in Section~\ref{sec:compare-res}.
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -103,8 +104,8 @@ different potentials will be compared in Section~\ref{sec:compare-res}.
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 
-At first order the solutions obtained agree with previous work
-\cite{Salopek:1988qh,Martin:2006rs,Ringeval:2007am}, with oscillations
+At first order the solutions obtained agree with previous work in
+Refs.~\cite{Salopek:1988qh, Martin:2006rs, Ringeval:2007am}, with oscillations
 being damped until horizon crossing (when $k=aH$) after which the
 curvature perturbation becomes conserved. Figure~\ref{fig:dp1} shows
 the real and imaginary parts of the first order perturbations from
@@ -129,7 +130,7 @@ dashed) perturbations are shown for $\kwmap$.}
 
 
 Figure~\ref{fig:dp2realimag} shows the evolution of the second
-order perturbations for wavenumber $\kwmap$. As mentioned above the
+order perturbations for $\kwmap$. As mentioned above the
 overall amplitude of the second order perturbations is many orders of
 magnitude smaller than the first order ones. In Figures~\ref{fig:dp1}
 and \ref{fig:dp2realimag} the field values have been rescaled by
@@ -179,7 +180,7 @@ spectrum for the WMAP pivot scale $\kwmap$.}
 % 
 Figure~\ref{fig:src-kwmap-3ranges} shows how the source term changes
 with the choice of $k$ range.  After horizon crossing the source terms
-are approximately equal. Before horizon crossing however there is a
+are approximately equal. Before horizon crossing, however, there is a
 strict hierarchy with the smaller $k$ ranges, $K_1$ and $K_2$, leading to
 smaller source
 contributions.  As stated in Section \ref{sec:tests-num}, $\Delta k$
@@ -285,9 +286,9 @@ horizon. The results are for the range $K_1=\left[ 1.9\e{-5},
 The source term for all $k$s can also be compared for different timesteps. In
 Figure~\ref{fig:src-3ns} the upper blue line shows $|S(k)|$ around 69 e-foldings
 before the end of
-inflation when $\dvp2$ has been initialised for only the very smallest $k$
+inflation when $\dvp1$ has been initialised for only the very smallest $k$
 modes. The middle green
-line shows $|S|$ when all $\dvp2$ modes have been started. Finally the lower red
+line shows $|S|$ when all $\dvp1$ modes have been started. Finally the lower red
 line plots $|S|$
 after all modes have exited the horizon, around 52 e-foldings before the end of
 inflation.
@@ -334,7 +335,7 @@ model has a blue spectrum ($n_s>1$).}
 Figure~\ref{fig:cmp-Pr} shows the power spectrum of curvature perturbations, $\Pr$, for each
 potential. The $V(\vp)=\msqphisq$, $\lambdaphifour$ and $\phitwooverthree$ models all clearly have
 a red spectrum with $n_s <1$. On the other hand the $V(\vp)=\msqphisqwithV$ model has a blue
-spectrum ($n_s>1$) when $V_0$ to chosen to be $5\e{-10}\Mpl^4$ as specified in
+spectrum ($n_s>1$) when $U_0$ to chosen to be $5\e{-10}\Mpl^4$ as specified in
 Section~\ref{sec:pots-num}. 
 % 
 The values of $n_s$ obtained for the four potentials are given in Table~\ref{table:ns-res}. 
@@ -388,10 +389,10 @@ $\lambdaphifour$ in \Rref{hustonmalik}.}
 % 
 While clearly these source terms are superficially similar
 there are differences apparent. In Figure~\ref{fig:cmp-src-kwmap} the source terms are plotted
-together for $\kwmap$. To enable comparison each result is given in terms of the initialisation time
-for that mode. This is because the mode $\kwmap$ begins at different times for the slightly
-different models. The change in duration is a consequence of allowing $H$ to evolve the
-calculation. 
+together for $\kwmap$. The $\kwmap$ mode begins at different times for the
+different models. To enable comparison each result is plotted in terms of the
+initialisation time for that mode.  The change in duration is a consequence of
+allowing $H$ to evolve during the calculation. 
 
 \begin{figure}
  \centering
@@ -409,11 +410,15 @@ with the $\msqphisq$ one. Figure~\ref{fig:cmp-src-zoom-kwmap} shows that at earl
 relationship is more complicated with the $\lambdaphifour$ mode being larger for a significant
 period.
 
-In the early stage the amplitude of the $V(\vp)=\phitwooverthree$ is very similar to the other two
+In the early stages the amplitude of the $V(\vp)=\phitwooverthree$ model is very
+similar to the other two
 results described above. After horizon crossing however there is a significant drop in the
-amplitude of $S$ in comparison with the $\msqphisq$ and $\lambdaphifour$ modes. This continues
-until late in the evolution when the $|S|$ increases swiftly to reach levels above both the others.
-The duration of the mode is shorter than the two other models described so far. 
+amplitude of $S$ in comparison with the $\msqphisq$ and $\lambdaphifour$ models. This
+continues
+until late in the evolution when $|S|$ increases swiftly to reach levels above the
+others.
+The duration of the mode in this model is shorter than in the other two models
+described so far. 
 
 \begin{figure}
  \centering
@@ -424,12 +429,15 @@ source term evolution for the four different models at early times.}
 \end{figure}
 % 
 
-The final model $V(\vp)=\msqphisqwithV$ is nominally a hybrid inflation model requiring two fields.
+The final model, $V(\vp)=\msqphisqwithV$, is nominally a hybrid inflation model
+requiring two fields.
 As described in Section~\ref{sec:pots-num}, in order to evaluate using the single field
-calculation the end time of inflation must be specified by hand. In this simulation $\vp\simeq 8$
+calculation, the end time of inflation must be specified by hand. In this simulation
+$\vp\simeq 8$
 is taken as the end time. In this region the potential is extremely flat and the effect of this can
 be seen in the source term of the model. Before horizon crossing it is of comparable magnitude to
-the other terms. However a steep descent ensure that it is a few orders of magnitude smaller than
+the other terms. However a steep descent ensures that it is a few orders of magnitude
+smaller than
 the other terms after horizon crossing. In contrast to the behaviour of the other models, the source
 term does not increase close to the end of inflation. This is due to the enforced end time cut-off
 which means that $\bar{\varepsilon}_H$ does not become large.
@@ -448,7 +456,7 @@ plans to extend the calculation to deal with more interesting models will be out
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 
 There are many possible next steps to improve the program outlined in
-Chapter \ref{ch:numericalsystem}. Chief amongst these is to implement the
+Chapter \ref{ch:numericalsystem}. Chief amongst these is the implementation of the
 full second order source term given in \eqs{eq:SOKG-real-num} and
 \eqref{eq:Fdvk1-fourier-num}. Although clearly
 more complicated than the slow roll case in \eq{eq:KG2-fourier-sr-ntime},
@@ -456,8 +464,8 @@ only three more $\theta$ dependent terms need to be added to the $\A$--$\D$ term
 listed in \eq{eq:AtoD-num}.  The four potentials used above are all slowly rolling
 during inflation. Therefore it is not expected that
 using the full source equation would result in an appreciably
-different outcome in the models until the end of the inflationary phase. Once
-the field has stopped to roll slowly, new observable features might
+different outcome in these models until near the end of the inflationary phase. Once
+the field has stopped rolling slowly, new observable features might
 arise as is indeed the case at first order. 
 
 
@@ -505,17 +513,16 @@ integrals in addition to those in \eq{eq:AtoD-num}:
 \begin{align}
 \label{eq:efg-terms-res}
  \E(\kvi, \qvi) &= \int_0^\pi \cos^3(\theta) \sin(\theta) \dvp1(\kvi-\qvi)\d \theta
-\nonumber \\
+\,,\nonumber \\
 % 
 \F(\kvi, \qvi) &= \int_0^\pi \frac{\sin^3(\theta)}{|\kvi-\qvi|^2} \dvp1(\kvi-\qvi)\d
-\theta
-\nonumber \\
+\theta \,,\nonumber \\
 % 
 \wt{\G}(\kvi, \qvi) &= \int_0^\pi \frac{\sin^3(\theta)}{|\kvi-\qvi|^2}
 \dN{\dvp1}(\kvi-\qvi)\d \theta \,.
 \end{align}
 % 
-The term $\sin^3(\theta)/|\kvi-\qvi|^2 \rightarrow 0$ in the limit when $k=q$ and
+The term $\sin^3(\theta)/|\kvi-\qvi|^2$ goes to $0$ in the limit when $k=q$ and
 $\theta\rightarrow 0$.
 % 
 Using the terms $\E$, $\F$ and $\wt{\G}$ the full $F$ term can now be written:
@@ -567,11 +574,11 @@ time of the full calculation will clearly be a significant logistical considerat
 
 With this in mind, the performance of the numerical simulation could be improved by
 analysing the most time consuming processes and investigating what
-optimisations could be implemented. The realisation of the current perhaps inelegant
-procedure will allow any performance improvements to be benchmarked for accuracy as
-well as speed.
+optimisations could be implemented. The realisation of the current, perhaps
+inelegant, procedure will allow any performance improvements to be benchmarked for
+accuracy as well as speed.
 % 
-As discussed above $N_k$ was set as $1025$ for the test runs. This provides good
+As discussed above $N_k$ was set to $1025$ for the test runs. This provides good
 coverage of the
 WMAP $k$ range but it is not clear whether it sufficiently
 approximates the integral to infinity for the source term.  Currently
@@ -610,9 +617,10 @@ calculation of field perturbations beyond
 first order using perturbation theory has been shown to be readily achievable, though
 not trivial.
 
-This first demonstration has been limited ourselves to considering
+This first demonstration has been limited to considering
 the slow roll source term in \eq{eq:KG2-fourier-sr-num} but without imposing
-slow roll on the evolution terms of the ODEs. Four different potentials
+slow roll on the evolution terms of the differential equations. Four different
+potentials
 $V(\vp)=\msqphisq$, $\lambdaphifour$, $\phitwooverthree$ and $\msqphisqwithV$ were
 used to demonstrate the capabilities of the
 system. The singularity at $k=0$ which arises as larger and larger
@@ -631,7 +639,7 @@ the numerical error. The convolution scheme that has been implemented
 works best when $\Delta k>\kmin$.
 
 
-We have seen explicitly that the second order calculations for our chosen
+We have seen explicitly that the second order calculations for the chosen
 potentials are obtainable once the cut-off for $\kmin$ is
 implemented. As expected for these unexceptional potentials in the slowly
 rolling regime the magnitude of second order perturbations is extremely
@@ -648,9 +656,9 @@ could yield greater insight into the formation and development of the
 non-Gaussian contributions by studying the contribution of the different
 terms in the source term \eq{eq:KG2-source-ntime}.
 %
-It was shown recently that in order to calculate $\fnl$ instead of
+It was shown recently that in order to calculate $\fnl$, instead of
 using the standard method based on the Lagrangian formalism
-\cite{Maldacena:2002vr}, one can instead use the field equations
+\cite{Maldacena:2002vr}, one can use the field equations
 \cite{Musso:2006pt,Seery:2008qj}. The method presented here will
 therefore eventually allow a full numerical calculation of $\fnl$.
 
@@ -659,8 +667,8 @@ In summary, we have demonstrated that numerically solving the closed
 Klein-Gordon equation for second order perturbations is possible. The slow roll
 version of the source term was used in the calculation, but
 as described in Section~\ref{sec:next-res}, the extention of the system to use
-the full source term is achievable. The models we have used have been shown to have
-negligible second order
-perturbations in line with analytic results. The
-analytic and numerical solutions for the convolution term have been compared and
-found to be in good agreement.
+the full source term is achievable. 
+The analytic and numerical solutions for one of the convolution terms have been
+compared and found to be in good agreement.
+The models used have been shown to have negligible second order
+perturbations in line with analytic results. 
