Add booktab package.

--- a/ihmacros.sty
+++ b/ihmacros.sty
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % 
 % ihmacros.sty - Ian Huston
-% $Id: ihmacros.sty,v 1.21 2009/10/14 13:29:46 ith Exp $
+% $Id: ihmacros.sty,v 1.22 2009/10/14 18:37:10 ith Exp $
 % % % % % % % % % % % % % % % % % 
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{ihmacros}
@@ -76,7 +76,7 @@
 \newcommand{\hybridtwoandfour}{\ensuremath{\msqphisq + \lambdaphifour}}
 \newcommand{\linde}{\ensuremath{-\msqphisq + \lambdaphifour +\frac{m^4}{4\lambda}}}
 \newcommand{\phitwooverthree}{\ensuremath{\sigma\varphi^{\frac{2}{3}}}}
-\newcommand{\msqphisqwithV}{\ensuremath{V_0 + \frac{1}{2} m_0^2 \varphi^2}}
+\newcommand{\msqphisqwithV}{\ensuremath{U_0 + \frac{1}{2} m_0^2 \varphi^2}}
 % 
 % 
 \newcommand{\cn}{\mathrm{\mathsf{c}}}
